--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,7 @@
 body {
-  margin-left: auto;
-  margin-right: auto;
   font-family: "Mulish", sans-serif;
-}
-
-.section {
-  height: 75vh;
-  padding: 50px;
-}
-
-.title .container {
-  text-align: center;
+  margin: 0;
+  scroll-behavior: smooth;
 }
 
 h1 {
@@ -18,6 +9,53 @@ h1 {
   margin-bottom: 0;
 }
 
+h2 {
+  font-size: 64px;
+}
+
+section {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 24px;
+}
+
+#title {
+  height: 100vh;
+  width: 100vw;
+  background-color: #00425a;
+  color: white;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 2s;
+}
+#title svg {
+  fill: currentColor;
+  height: auto;
+  max-width: 66vmin;
+  transform-origin: center;
+  width: 66%;
+  animation: spin 20s normal infinite linear;
+}
+#title .container {
+  width: 40%;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .subtitle {
   font-weight: 200;
   margin-top: 0;
