--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Mulish", sans-serif;
   margin: 0;
+  scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
 
@@ -18,6 +19,7 @@ section {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 24px;
+  scroll-snap-align: start;
 }
 
 #title {
@@ -45,6 +47,11 @@ section {
   width: 40%;
 }
 
+.subtitle {
+  font-weight: 200;
+  margin-top: 0;
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0);
@@ -55,10 +62,6 @@ section {
   100% {
     transform: rotate(360deg);
   }
-}
-.subtitle {
-  font-weight: 200;
-  margin-top: 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
