--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,6 +6,7 @@ $accent: #fc7300;
 body {
   font-family: 'Mulish', sans-serif;
   margin: 0;
+  scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
 
@@ -23,6 +24,7 @@ section {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 24px;
+  scroll-snap-align: start;
 }
 
 #title {
@@ -52,6 +54,11 @@ section {
   }
 }
 
+.subtitle {
+  font-weight: 200;
+  margin-top: 0;
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0);
@@ -62,9 +69,4 @@ section {
   100% {
     transform: rotate(360deg);
   }
-}
-
-.subtitle {
-  font-weight: 200;
-  margin-top: 0;
 }
