--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,9 @@
 body {
   font-family: "Mulish", sans-serif;
   margin: 0;
-  scroll-snap-type: y mandatory;
+  scroll-snap-type: y proximity;
   scroll-behavior: smooth;
+  color: #00425a;
 }
 
 h1 {
@@ -20,6 +21,22 @@ section {
   margin-right: auto;
   margin-bottom: 24px;
   scroll-snap-align: start;
+}
+section.half {
+  height: 25vh;
+  background-color: #bfdb38;
+  width: 100%;
+  margin-top: -24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+section.half div {
+  width: 75%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px;
 }
 
 #title {
