--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,7 @@ h1 {
 
 h2 {
   font-size: 64px;
+  margin-bottom: 24px;
 }
 
 section {
@@ -20,7 +21,7 @@ section {
   margin-bottom: 24px;
 }
 section.half {
-  height: 25vh;
+  min-height: 25vh;
   background-color: #bfdb38;
   width: 100%;
   margin-top: -24px;
@@ -47,7 +48,6 @@ section.half div {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: opacity 2s;
 }
 #title svg {
   fill: currentColor;
