--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,11 +14,22 @@ h2 {
   margin-bottom: 24px;
 }
 
+a {
+  text-decoration: none;
+  color: #fc7300;
+  transition: color 0.3s;
+}
+
+a:hover {
+  color: #1f8a70;
+}
+
 section {
   width: 75%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 24px;
+  min-height: 50vh;
 }
 section.half {
   min-height: 25vh;
